add and customize fish

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@ unbind-key C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 set-option -g set-titles-string "#T - #W"
-
+set -g mouse on
 
 # Set the default terminal
 set-option -g default-terminal "xterm-256color"
