add keybinds, alias and color to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 unbind-key C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-t
+bind-key C-t send-prefix
 set-option -g set-titles-string "#T - #W"
 set -g mouse on
 
@@ -23,7 +23,6 @@ set-window-option -g mode-keys vi
 # Set status bar options
 set-option -g status-position bottom
 set-option -g status-justify "centre"
-set-option -g status-style "bg=black, fg=white"
 
 # Reload the configuration file
 bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded"
@@ -37,8 +36,11 @@ setw -g monitor-activity on
 set-option -g visual-activity on
 
 # Set status bar colors
-set -g status-style "bg=default,fg=default"
-set -g message-style "bg=default,fg=default"
+set -g status-style bg="#3A3A3A",fg=default
+set -g message-style "bg=default,fg=yellow"
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%Y-%m-%d %H:%M')"
+set-option -g pane-active-border-style "bg=default"
+set-option -g window-status-current-format "#[fg=#3A3A3A, bg=#87D787, bold] #I #W "
+
