fzf,nvim,tmux update
create better find dir function in fzf
make better lsnip and delete buffer line - weird tabs with oil.nvim i didn't like
update tmux colors

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,15 +15,13 @@ bind-key - split-window -v
 #bind-key l split-window -h \; select-pane -t:.+
 
 # split 
-bind-key l split-window -h 
+bind-key l split-window -h -c "#{pane_current_path}"
 
 # kill 
 bind-key k kill-pane
 
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
-
-
 
 #no need to rename title
 set-option -g allow-rename off 
@@ -50,11 +48,11 @@ set-option -g status-position "top"
 set-option -g status-justify "centre"
 
 # Set status bar colors
-set -g status-style bg=default,fg=default
+set -g status-style bg=#2B2A33,fg=default
 set -g message-style "bg=default,fg=yellow"
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%Y-%m-%d %H:%M')"
 set-option -g pane-active-border-style "bg=default"
-set-option -g window-status-current-format "#[fg=default, bg=default, bold] #I #W "
+set-option -g window-status-current-format "#[fg=black, bg=white, bold] #I #W "
 
