remove oil, add flash

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,7 +24,7 @@ bind-key k kill-pane
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
 
 #no need to rename title
-set-option -g allow-rename off 
+set-option -g automatic-rename off 
 
 #mousek
 set -g mouse on
@@ -54,5 +54,5 @@ set -g message-style "bg=default,fg=yellow"
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%Y-%m-%d %H:%M')"
 set-option -g pane-active-border-style "bg=default"
-set-option -g window-status-current-format "#[fg=black, bg=white, bold] #I #W "
+set-option -g window-status-current-format "#[fg=default, bg=default, bold] #I #W "
 
