--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -49,10 +49,18 @@ set-option -g status-justify "centre"
 
 # Set status bar colors
 set -g status-style bg=#2B2A33,fg=default
-set -g message-style "bg=default,fg=yellow"
+set -g message-style bg=#2B2A33,fg=yellow
 
 # Set the status bar to show the current date and time
-set -g status-right "#(date '+%Y-%m-%d %H:%M')"
-set-option -g pane-active-border-style "bg=default"
-set-option -g window-status-current-format "#[fg=default, bg=default, bold] #I #W "
+set -g status-right "#(date '+%Y-%m-%d %H:%M') "
+set -g status-left " #S"
+
+# set pane color border line to default
+set -g pane-active-border-style ""
+
+
+set -g window-status-current-style "fg=yellow, bg=default, bold, underscore"
+set -g window-status-style "fg=#ababab, bg=default, bold"
+set -g window-status-current-format "#W"
+set -g window-status-format "#W"
 
