--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,7 +4,7 @@ unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
 
-#doesn't seem to be needed anymore  
+#doesn't seem to be needed anymore
 # bind-key -n C-I send-keys "\u001b[105;5u"
 
 # Split windows using | and -
@@ -14,17 +14,17 @@ bind-key - split-window -v
 # make split pane without navigating to it
 #bind-key l split-window -h \; select-pane -t:.+
 
-# split 
+# split
 bind-key l split-window -h -c "#{pane_current_path}"
 
-# kill 
+# kill
 bind-key k kill-pane
 
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
 
 #no need to rename title
-set-option -g automatic-rename off 
+set-option -g automatic-rename off
 
 #mousek
 set -g mouse on
@@ -48,19 +48,19 @@ set-option -g status-position "top"
 set-option -g status-justify "centre"
 
 # Set status bar colors
-set -g status-style bg=#2B2A33,fg=default
-set -g message-style bg=#2B2A33,fg=yellow
+set -g status-style bg=#282C34,fg=white
+set -g message-style bg=#282C34,fg=#FFE5b4
 
 # Set the status bar to show the current date and time
-set -g status-right "#(date '+%Y-%m-%d %H:%M') "
+set -g status-right "#(date '+%m-%d-%Y %I:%M') "
 set -g status-left " #S"
 
 # set pane color border line to default
 set -g pane-active-border-style ""
 
 
-set -g window-status-current-style "fg=yellow, bg=default, bold, underscore"
-set -g window-status-style "fg=#ababab, bg=default, bold"
+set -g window-status-current-style "fg=#FFE5b4, bg=default, bold, underscore"
+set -g window-status-style "fg=white, bg=default, bold"
 set -g window-status-current-format "#W"
 set -g window-status-format "#W"
 
