--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 # my tmux config
 
 unbind-key C-b
+
 set-option -g prefix C-t
 bind-key C-t send-prefix
 
@@ -14,8 +15,11 @@ bind-key - split-window -v
 # make split pane without navigating to it
 #bind-key l split-window -h \; select-pane -t:.+
 
-# split
+# split 
 bind-key l split-window -h -c "#{pane_current_path}"
+
+# # on new window 
+bind-key c new-window -c "#{pane_current_path}"
 
 # kill
 bind-key k kill-pane
@@ -48,8 +52,8 @@ set-option -g status-position "top"
 set-option -g status-justify "centre"
 
 # Set status bar colors
-set -g status-style bg=#282C34,fg=white
-set -g message-style bg=#282C34,fg=#FFE5b4
+set -g status-style bg=#1E1E1E,fg=#DCDCAA
+set -g message-style bg=#1E1E1E,fg=#DCDCAA
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%m-%d-%Y %I:%M') "
@@ -58,9 +62,7 @@ set -g status-left " #S"
 # set pane color border line to default
 set -g pane-active-border-style ""
 
-
-set -g window-status-current-style "fg=#FFE5b4, bg=default, bold, underscore"
-set -g window-status-style "fg=white, bg=default, bold"
+set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
+set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
 set -g window-status-current-format "#W"
 set -g window-status-format "#W"
-
