--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -4,7 +4,7 @@ set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
 set show_hidden true
-set confirm_on_delete multiple
+set confirm_on_delete never
 
 #set preview_script ~/.config/ranger/scope.sh
 
