--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,20 +6,14 @@ unbind-key C-o
 set-option -g prefix C-t
 bind-key C-t send-prefix
 
-#doesn't seem to be needed anymore
-# bind-key -n C-I send-keys "\u001b[105;5u"
-
 # Split windows using | and -
 bind-key | split-window -h
 bind-key - split-window -v
 
-# make split pane without navigating to it
-#bind-key l split-window -h \; select-pane -t:.+
-
-# split 
+# split
 bind-key l split-window -h -c "#{pane_current_path}"
 
-# # on new window 
+# # on new window
 bind-key c new-window -c "#{pane_current_path}"
 
 # kill
@@ -28,17 +22,12 @@ bind-key k kill-pane
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
 
-# #no need to rename title
-# set-option -g automatic-rename off
-
-# #mousek
-# set -g mouse on
+#no need to rename title
+set-option -g automatic-rename off
 
 # Set the default terminal
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g default-terminal "xterm-256color"
-
-#set-option -as terminal-overrides ",xterm*:sitm=\E[3m"
 
 # Start numbering windows from 1
 set-option -g base-index 1
@@ -48,22 +37,22 @@ set-window-option -g pane-base-index 1
 setw -g monitor-activity on
 set-option -g visual-activity on
 
-# # Set status bar options
-# set-option -g status-position "top"
-# set-option -g status-justify "centre"
+# Set status bar options
+set-option -g status-position "top"
+set-option -g status-justify "centre"
 
-# # Set status bar colors
-# set -g status-style bg=#1E1E1E,fg=#DCDCAA
-# set -g message-style bg=#1E1E1E,fg=#DCDCAA
+# Set status bar colors
+set -g status-style bg=#1E1E1E,fg=#DCDCAA
+set -g message-style bg=#1E1E1E,fg=#DCDCAA
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%m-%d-%Y %I:%M') "
 set -g status-left " #S"
 
-# # set pane color border line to default
-# set -g pane-active-border-style ""
+# set pane color border line to default
+set -g pane-active-border-style ""
 
-# set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
-# set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
-# set -g window-status-current-format "#W"
-# set -g window-status-format "#W"
+set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
+set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
+set -g window-status-current-format "#W"
+set -g window-status-format "#W"
