--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -1,3 +1,5 @@
+# vim: ft=cfg
+
 set viewmode miller
 set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -24,14 +26,9 @@ set vcs_backend_git enabled
 # Truncate the long commit messages to this length when shown in the statusbar.
 set vcs_msg_length 50
 
-# Use one of the supported image preview protocols
-set preview_images true
-
-set preview_images_method w3m
-set w3m_delay 0.02
-
-# Manually adjust the w3mimg offset when using a terminal which needs this
-set w3m_offset 0
+# # Use one of the supported image preview protocols
+# set preview_images true
+# set preview_images_method sixel
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -247,8 +244,7 @@ alias filter     scout -prts
 alias find       scout -aets
 alias mark       scout -mr
 alias unmark     scout -Mr
-alias search     scout -rs
-alias search_inc scout -rts
+alias search     scout -rts
 alias travel     scout -aefklst
 
 # ===================================================================
