alias updates, ranger image preview testing

--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -1,4 +1,8 @@
 # vim: ft=cfg
 
-ext pdf = zathura "$@"
+ext pdf = wslview "$@"
+
+# open things with windows
+mime ^audio|^video  = wslview "$@"
 label editor = ${VISUAL:-$EDITOR} "$@"
+
