--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -27,8 +27,8 @@ set vcs_backend_git enabled
 set vcs_msg_length 50
 
 # # Use one of the supported image preview protocols
-# set preview_images true
-# set preview_images_method sixel
+set preview_images true
+set preview_images_method ueberzug
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
