update my lsp config to lspzero

--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -4,5 +4,6 @@ ext pdf = wslview "$@"
 
 # open things with windows
 mime ^audio|^video  = wslview "$@"
+mime ^image  = wslview "$@"
 label editor = ${VISUAL:-$EDITOR} "$@"
 
