added better closing func
in which key - not a fan of it's palcement. need to have a utils or custom functions file. idk maybe having the samll func where it does it's job isn't a bad idea.
now on <leader>q i bdelete if the file is saved and named and force q! if new. helps while
I am iterating on files.

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -26,6 +26,10 @@ set vcs_backend_git enabled
 # Truncate the long commit messages to this length when shown in the statusbar.
 set vcs_msg_length 50
 
+# # Use one of the supported image preview protocols
+set preview_images true
+set preview_images_method sixel
+
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
 set iterm2_font_height 11
