--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,19 +1,19 @@
 # my tmux config
 
+#bc conflicting keymaps
 unbind-key C-b
 unbind-key C-o
+
 set -g mouse on
+
+#set c-t
 set-option -g prefix C-t
 bind-key C-t send-prefix
 
-# Split windows using | and -
-bind-key | split-window -h
-bind-key - split-window -v
-
-# split
+# split horizotally with teh same path
 bind-key l split-window -h -c "#{pane_current_path}"
 
-# # on new window
+# create new window
 bind-key c new-window -c "#{pane_current_path}"
 
 # kill
@@ -22,8 +22,8 @@ bind-key k kill-pane
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
 
-#no need to rename title
-set-option -g automatic-rename off
+# #no need to rename title
+# set-option -g automatic-rename off
 
 # Set the default terminal
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -37,8 +37,7 @@ set-window-option -g pane-base-index 1
 setw -g monitor-activity on
 set-option -g visual-activity on
 
-# Set status bar options
-set-option -g status-position "top"
+# # Set status bar options
 set-option -g status-justify "centre"
 
 # Set status bar colors
@@ -47,7 +46,7 @@ set -g message-style bg=#1E1E1E,fg=#DCDCAA
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%m-%d-%Y %I:%M') "
-set -g status-left " #S"
+set -g status-left " #S "
 
 # set pane color border line to default
 set -g pane-active-border-style ""
