create cheat alias, install python, update lfrc

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -24,8 +24,8 @@ bind-key k kill-pane
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
 
-# #no need to rename title
-# set-option -g automatic-rename off
+# don't rename the title
+set-option -g automatic-rename off
 
 # Set the default terminal
 set-option -ga terminal-overrides ",xterm-256color:Tc"
