--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # my tmux config
 
 set -g default-command /bin/zsh
-
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 #bc conflicting keymaps
 unbind-key C-b
 unbind-key C-o
@@ -14,6 +14,8 @@ bind-key C-t send-prefix
 
 # split horizotally with teh same path
 bind-key l split-window -h -c "#{pane_current_path}"
+
+bind-key u send-keys -t "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs wslview" Enter
 
 # create new window
 bind-key c new-window -c "#{pane_current_path}"
