add project_root util for files/grep in neovim

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,7 +1,11 @@
 # my tmux config
-
 set -g default-command /bin/zsh
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set-option -g focus-events on
+
+# escape time
+set-option -sg escape-time 10
+
 #bc conflicting keymaps
 unbind-key C-b
 unbind-key C-o
@@ -41,12 +45,12 @@ set-window-option -g pane-base-index 1
 setw -g monitor-activity on
 set-option -g visual-activity on
 
-# # Set status bar options
-set-option -g status-justify "centre"
-
-# Set status bar colors
-set -g status-style bg=#1E1E1E,fg=#DCDCAA
-set -g message-style bg=#1E1E1E,fg=#DCDCAA
+# # # Set status bar options
+# set-option -g status-justify "centre"
+#
+# # Set status bar colors
+# set -g status-style bg=#1E1E1E,fg=#DCDCAA
+# set -g message-style bg=#1E1E1E,fg=#DCDCAA
 
 # Set the status bar to show the current date and time
 set -g status-right "#(date '+%m-%d-%Y %I:%M') "
@@ -55,7 +59,7 @@ set -g status-left " #S "
 # set pane color border line to default
 set -g pane-active-border-style ""
 
-set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
-set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
-set -g window-status-current-format "#W"
-set -g window-status-format "#W"
+# set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
+# set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
+# set -g window-status-current-format "#W"
+# set -g window-status-format "#W"
