--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,1 +1,18 @@
-/mnt/c/Users/ajcon/AppData/Roaming/alacritty/alacritty.toml
+[font]
+size = 12.0
+normal = {family = "JetBrainsMono NerdFont", style = "regular"}
+italic = {family = "JetBrainsMono NerdFont", style = "italic"}
+bold = {family = "JetBrainsMono NerdFont", style = "bold"}
+
+
+[window]
+startup_mode = "Fullscreen"
+padding = {x = 10, y = 10}
+
+[terminal]
+osc52 = "CopyPaste"
+
+[keyboard]
+bindings = [
+{key = "Insert",mods = "Shift",action = "paste"}
+]
