--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,10 +1,6 @@
-# my tmux config
-set -g default-command /bin/zsh
-set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set-option -g focus-events on
-
 # escape time
 set-option -sg escape-time 10
+set-option -g history-limit 100000
 
 #bc conflicting keymaps
 unbind-key C-b
@@ -18,48 +14,34 @@ bind-key C-t send-prefix
 
 # split horizotally with teh same path
 bind-key l split-window -h -c "#{pane_current_path}"
-
-bind-key u send-keys -t "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs wslview" Enter
-
-# create new window
 bind-key c new-window -c "#{pane_current_path}"
-
-# kill
 bind-key k kill-pane
+
+# get links working
+set -ga terminal-features "*:hyperlinks"
+
+# copy to X clipboard
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
+bind -T copy-mode-vi Enter send-keys -X cancel
+
+# Avoid ESC delay
+# Not 0 so we still parse ESCs
+set -sg escape-time 10
+
+# Fix titlebar
+set -g set-titles on
+set -g set-titles-string "#T"
+
+# VIM mode
+set -g mode-keys vi
+
+# because neovim wants it
+set-option -g focus-events on
+
+# Avoid date/time taking up space
+set -g status-right ''
+set -g status-right-length 0
 
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
-
-# don't rename the title
-set-option -g automatic-rename off
-
-# Set the default terminal
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "xterm-256color"
-
-# Start numbering windows from 1
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-
-# Enable window activity alerts
-setw -g monitor-activity on
-set-option -g visual-activity on
-
-# # # Set status bar options
-# set-option -g status-justify "centre"
-#
-# # Set status bar colors
-# set -g status-style bg=#1E1E1E,fg=#DCDCAA
-# set -g message-style bg=#1E1E1E,fg=#DCDCAA
-
-# Set the status bar to show the current date and time
-set -g status-right "#(date '+%m-%d-%Y %I:%M') "
-set -g status-left " #S "
-
-# set pane color border line to default
-set -g pane-active-border-style ""
-
-# set -g window-status-current-style "fg=#DCDCAA, bg=default, bold, underscore"
-# set -g window-status-style "fg=#5B5B5B, bg=#1E1E1E, bold"
-# set -g window-status-current-format "#W"
-# set -g window-status-format "#W"
