--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -16,14 +16,13 @@ bind-key C-t send-prefix
 bind-key l split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 bind-key k kill-pane
+bind -T copy-mode-vi v send -X begin-selection
+# bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind -T copy-mode-vi Enter send-keys -X cancel
 
 # get links working
 set -ga terminal-features "*:hyperlinks"
-
-# copy to X clipboard
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
-bind -T copy-mode-vi Enter send-keys -X cancel
 
 # Avoid ESC delay
 # Not 0 so we still parse ESCs
