--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # escape time
 set-option -sg escape-time 10
 set-option -g history-limit 100000
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 #bc conflicting keymaps
 unbind-key C-b
@@ -16,6 +18,7 @@ bind-key C-t send-prefix
 bind-key l split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
 bind-key k kill-pane
+
 bind -T copy-mode-vi v send -X begin-selection
 # bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
@@ -44,3 +47,18 @@ set -g status-right-length 0
 
 # Reload the configuration file
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded"
+
+
+# Set status line colors to match i3
+set -g status-bg '#285577'
+set -g status-fg '#ffffff'
+
+# Active window (white text)
+set -g window-status-current-style 'bg=#285577,fg=#ffffff'
+
+# Inactive window (slightly dimmed white text)
+set -g window-status-style 'bg=#285577,fg=#cccccc'
+
+# Set pane borders to grey
+set -g pane-border-style 'fg=#666666'
+set -g pane-active-border-style 'fg=#666666'
