--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -30,8 +30,9 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 tiling_drag modifier titlebar
 
-# terminal
-bindsym $mod+Return exec alacritty
+# terminal- testing kitty
+# bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
